2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Added generic interrupt support modules.
	* include/bsp.h: Define BSP_FEATURE_IRQ_EXTENSION.
	* startup/bspstart.c, rtl8019/rtl8019.c: Interrupt support changes.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* make/custom/gumstix.cfg: Use VFP floating point model.

2010-04-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* rtl8019/rtl8019.c: make irq data types consistent

2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* start/start.S: Verify boot_card() is passed a NULL.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/gumstix.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/gumstix.cfg: New (relocated from /make/custom).

2009-09-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* preinstall.am: Regenerate.

2009-09-16	Joel Sherrill <joel.sherrill@OARcorp.com>

	* configure.ac: Resolve confusion with Ralf's patch.

2009-09-16	Roxana Leontie <roxana.leontie@gmail.com>

	* configure.ac, fb/fb.c, include/bsp.h: updates made for porting to
	Nano-X and make testing easyer

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: If not on Skyeye, do not include the rtl8019 driver
	in libbsp.

2009-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Add default value.

2009-08-22	Xi Yang <hiyangxi@gmail.com>

	* fb/fb.c: Register correct device name.
	* startup/bspstart.c: Fix warnings.

2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-08-21	Xi Yang <hiyangxi@gmail.com>
