@@ -1,3 +1,7 @@
+2010-05-03	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* rtl8019/rtl8019.c: Fixed interrupt handler.
+
 2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* Makefile.am, preinstall.am: Added generic interrupt support modules.
